--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.50",
+    "@studio-freight/lenis": "^1.0.35",
+    "@theme-toggles/react": "^4.1.0",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
+    "lenis-monorepo": "github:studio-freight/lenis",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
